# niritiling

./: Cargo.toml  README.md  flake.nix
nix/: module.nix
src/: main.rs  manager.rs  tests.rs
